--- a/composer.json
+++ b/composer.json
@@ -41,10 +41,13 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "lint-dry-run": [
-            "./tools/php-cs-fixer/vendor/bin/php-cs-fixer fix . --rules=@PhpCsFixer --verbose --dry-run"
+            "./tools/php-cs-fixer/vendor/bin/php-cs-fixer fix .  --verbose --dry-run"
         ],
         "lint": [
-            "./tools/php-cs-fixer/vendor/bin/php-cs-fixer fix . --rules=@PhpCsFixer"
+            "./tools/php-cs-fixer/vendor/bin/php-cs-fixer fix . "
+        ],
+        "unit-test": [
+            "composer run-script lint && ./vendor/bin/phpunit --coverage-text"
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
