--- a/codeception.yml
+++ b/codeception.yml
@@ -10,3 +10,7 @@ extensions:
         - Codeception\Extension\RunFailed
 coverage:
     enabled: true
+    include:
+        - app/*
+    exclude:
+        - tests
