--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,12 @@
         "laravel/tinker": "^2.5"
     },
     "require-dev": {
-        "codeception/codeception": "^4.1",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "codeception/module-phpbrowser": "^1.0.0",
-        "codeception/module-asserts": "^1.0.0"
+        "phpunit/phpunit": "^9"
     },
     "autoload": {
         "psr-4": {
@@ -52,10 +50,10 @@
             "./tools/php-cs-fixer/vendor/bin/php-cs-fixer fix . "
         ],
         "unit-test": [
-            "composer run-script lint && php vendor/bin/codecept run unit --coverage"
+            "composer run-script lint && ./vendor/bin/phpunit --coverage-text"
         ],
         "e2e-test": [
-            "php vendor/bin/codecept run acceptance"
+            "./vendor/bin/phpunit tests/Feature/"
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
