build: docker-compose conf ok

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
       - MARIADB_USER=my_user
       - MARIADB_DATABASE=my_database
       - MARIADB_PASSWORD=my_password
-
+    ports:
+      - '3302:3306'
   myapp:
     tty: true
     image: docker.io/bitnami/laravel:8
