--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
             "composer run-script lint && php artisan test --coverage-text"
         ],
         "feature-test": [
-            "php artisan test tests/Feature --coverage-text"
+            "composer run-script lint && php artisan test tests/Feature --coverage-text"
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
